feat: turnkey install with Java 8 support and Fiji auto-launch
Redesign the install experience for public release. The primary persona
is a biologist with an existing Fiji installation — no Maven, JDK, or
manual JAR copying required.

- Downgrade Java plugin target from 21 to 8 for maximum Fiji compat
  (records → classes, pattern matching → casts, switch expressions →
  statements, Java 9+ APIs → Java 8 equivalents)
- Add `fiji-mcp install` CLI command that auto-discovers Fiji and copies
  the bundled plugin JAR into plugins/
- Add Fiji auto-discovery (FIJI_HOME env → common OS paths) via new
  fiji_home.py module
- Auto-launch Fiji with bridge on first tool call when FIJI_HOME is set
- Bundle pre-built JAR as Python package data (no build step for users)
- Rewrite README install section: 3 steps, no Java/Maven prerequisites

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>